--- a/GeoSense.API/GeoSense.API.csproj
+++ b/GeoSense.API/GeoSense.API.csproj
@@ -24,7 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <Folder Include="src\Domain\ValueObjects\" />
+    <Folder Include="src\Infrastructure\Migrations\" />
   </ItemGroup>
 
 </Project>
