--- a/GeoSense.API/GeoSense.API.csproj
+++ b/GeoSense.API/GeoSense.API.csproj
@@ -30,6 +30,9 @@
 		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="8.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
+
+		<!-- MongoDB driver -->
+		<PackageReference Include="MongoDB.Driver" Version="2.24.0" />
 	</ItemGroup>
 
 </Project>
