--- a/GeoSense.API.Tests/GeoSense.API.Tests.csproj
+++ b/GeoSense.API.Tests/GeoSense.API.Tests.csproj
@@ -19,6 +19,10 @@
 		<PackageReference Include="xunit" Version="2.5.3" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.13" />
+
+		<!-- Mongo integration testing -->
+		<PackageReference Include="Mongo2Go" Version="3.1.0" />
+		<PackageReference Include="MongoDB.Driver" Version="2.24.0" />
 	</ItemGroup>
 
 	<ItemGroup>
